kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kub-js-v1-nodeport
spec:
#  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
#    nodePort: 30123
  selector:
    app: kub-js-v1
---
apiVersion: v1
kind: Service
metadata:
  name: kub-js-v2-nodeport
spec:
#  type: NodePort
  ports:
  - name: http-openresty
    port: 80
    targetPort: 80
  - name: http-nodejs
    port: 8080
    targetPort: 8080
#    nodePort: 30124
  selector:
    app: kub-js-v2
